--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                    ANOOP P  built the Blood Bank app as
+                    ANOOP P  built the Blood Drop app as
                     a Free app. This SERVICE is provided by
                     ANOOP P  at no cost and is intended for
                     use as is.
@@ -28,7 +28,7 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-                    Blood Bank unless otherwise defined in this Privacy
+                    Blood Drop unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
